<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/sortContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
        app:layout_constraintTop_toBottomOf="@+id/searchBarHome">

        <Spinner
            android:id="@+id/sortBy"
            style="@style/Widget.AppCompat.DropDownItem.Spinner"
            android:layout_width="128dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:animateLayoutChanges="true"
            android:background="@drawable/layout_bg"
            android:elevation="4dp"
            android:entries="@array/sortBy"
            android:spinnerMode="dropdown"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/upDown"
            style="@style/Widget.AppCompat.DropDownItem.Spinner"
            android:layout_width="128dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:animateLayoutChanges="true"
            android:background="@drawable/layout_bg"
            android:backgroundTint="@color/main_500"
            android:elevation="4dp"
            android:entries="@array/upDown"
            android:spinnerMode="dropdown"
            android:textAlignment="center" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:id="@+id/topESG"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/top_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/top_companies"
                android:textFontWeight="900"
                android:textSize="32sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/main_500"
                    android:background="@drawable/layout_bg"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/topEsgHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textFontWeight="800"
                        android:textColor="@color/black_bg"
                        android:text="@string/topEsgHeader" />

                    <TextView
                        android:id="@+id/topEsgComp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black_bg"
                        android:alpha="0.7"
                        android:textFontWeight="400"
                        android:text="TextView" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/topS"
                    android:visibility="invisible"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:padding="12dp"
                    android:backgroundTint="@color/social"
                    android:background="@drawable/layout_bg">
                    <TextView
                        android:id="@+id/topSHeader"
                        android:textSize="20sp"
                        android:textFontWeight="800"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black_bg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/topSHeader" />

                    <TextView
                        android:id="@+id/topSComp"
                        android:textSize="16sp"
                        android:textFontWeight="400"
                        android:textColor="@color/black_bg"
                        android:alpha="0.7"
                        android:textAlignment="textEnd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/topE"
                    android:visibility="invisible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/environment"
                    android:background="@drawable/layout_bg"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/topEHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textFontWeight="800"
                        android:textColor="@color/black_bg"
                        android:text="@string/topEHeader" />

                    <TextView
                        android:id="@+id/topEComp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black_bg"
                        android:alpha="0.7"
                        android:textFontWeight="400"
                        android:text="TextView" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/topG"
                    android:visibility="invisible"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:padding="12dp"
                    android:backgroundTint="@color/governance"
                    android:background="@drawable/layout_bg">
                    <TextView
                        android:id="@+id/topGHeader"
                        android:textSize="20sp"
                        android:textFontWeight="800"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black_bg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/topGHeader" />

                    <TextView
                        android:id="@+id/topGComp"
                        android:textSize="16sp"
                        android:textFontWeight="400"
                        android:textColor="@color/black_bg"
                        android:alpha="0.7"
                        android:textAlignment="textEnd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/watchlist_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/companies_header"
                android:textFontWeight="900"
                android:textSize="32sp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewCompanies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none" />
        </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchBarHome"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/layout_bg"
        android:backgroundTint="#D1CCDC"
        />



    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>